2001-07-18 Kevin Vandersloot <kfv101@psu.edu>

	*procdialogs.c: add preferences dialog.

	*procdialogs.c (create_renice_dialog): cosmetic improvements.
	I'm still not satisfied with this dialog.

2001-07-18 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (proctable_get_value): use
	e_utf8_from_locale_string for the process name to properly
	display names in the tree. This generates a lot of warnings
	so I hope there is a better solution.

	*procman.h: add new config variable show_pretty_names
	to show the .desktop names

	*proctable.c (get_info): Get the pretty name if needed.

	*favorites.c (get_blacklist): remove an unessecary g_print.

2001-07-18 Kevin Vandersloot <kfv101@psu.edu>

	Create a hide message dialog similar to the end process one.

	*procdialogs.c: add the dialog in the same fashion as the end
	process one.

	*procman.[c,h]: add boolean to config show_hide_message.

	*callbacks.c (cb_hide_process): show the dialog if needed.

2001-07-16 Kevin Vandersloot <kfv101@psu.edu>

	*interface.c: make the menu keyboard shortcuts use CTRL

2001-07-16 Kevin Vandersloot <kfv101@psu.edu>

	*interface.c (create_main_window): put cpu/mem/swap progress
	meters on a faster timeout.

	*callbacks.[c,h] (cb_progress_meter_timeout): new callback
	for cpu/mem/swap timeout

	*proctable.c (proctable_update_progress_meters): new function
	to update the progress meters.

2001-07-16 Kevin Vandersloot <kfv101@psu.edu>

	*procman.h: add config option to not show icons. Speeds up
	load time.

	*procman.c (main): move a bunch of prettytable stuff into
	prettytable.c where it belongs.

	*prettytable.c (prettytable_get[icon,name]): check if the hash
	table exists. If not then it means icons should not be shown.

2001-07-16 Kevin Vandersloot <kfv101@psu.edu>

	*favorites.c: add dialog to edit hidden processes.

	*proctable.c (update_info): add a little logic to show
	a process that was hidden but now needs to be shown.
