@@ -1,3 +1,9 @@
+2001-07-19 Kevin Vandersloot <kfv101@psu.edu>
+
+	*proctable.c (refresh_list): remove the call to g_list_copy
+	as it caused a crash. I need to understand GLists better.
+	Fixes bug #57782
+
 2001-07-18 Kevin Vandersloot <kfv101@psu.edu>
 
 	*procdialogs.c: add preferences dialog.
